public/styles/global.css
/* ... */
    code,
    pre {
      font-family: var(--font-mono);
      font-size: 1.1rem;
      color: var(--accent-color);
    }

    pre.astro-code {
      padding: 1rem;
    }

    .styled-link-underlines a:not(.lty-playbtn) {
      text-decoration: none;
      background-repeat: no-repeat;
      background-size: 100% 0.24em;
      background-position: 0 114%;
      background-image: linear-gradient(
        45deg,
        var(--accent-color),
        var(--accent-color)
      );
    }

    .styled-link-underlines a.external {
      background-size: calc(100% - 15px) 0.24em;
    }

    .styled-link-underlines a:hover {
      color: var(--accent-color);
    }

    .rainbows .styled-link-underlines a:not(.lty-playbtn) {
      background-image: var(--gradient-color);
    }

    canvas {
      position: fixed;
      top: 0;
      left: 0;
      display: none;
      pointer-events: none;
    }

    article img {
      max-width: 95%;
    }

    @media (min-width: 640px) {
      .cursor-trails canvas {
        display: block;
      }
    }

    @media (max-width: 640px) {
      html,
      body {
        overflow-x: hidden;
      }
    }

    blockquote {
      font-style: italic;
      margin: 1.5em;
      position: relative;
    }

    blockquote::before {
      content: "";
      display: block;
      width: 4rem;
      height: 5rem;
      -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' x='0px' y='0px' viewBox='0 0 100 125' enable-background='new 0 0 100 100' xml:space='preserve'%3E%3Cg%3E%3Cpath d='M23.105,55.627c-0.005,0.138-0.021,0.273-0.021,0.413c0,0.047,0.006,0.092,0.007,0.138 c-0.001,0.092-0.007,0.183-0.007,0.275l0.02-0.014c0.212,6.166,5.265,11.103,11.482,11.103c6.352,0,11.502-5.149,11.502-11.502 c0-5.796-4.292-10.577-9.869-11.372c1.386-4.595,5.645-7.938,10.695-7.938v-4.106C34.021,32.625,23.541,42.841,23.105,55.627z'/%3E%3Cpath d='M52.941,55.627c-0.005,0.138-0.021,0.273-0.021,0.413c0,0.047,0.007,0.092,0.007,0.138 c-0.001,0.092-0.007,0.183-0.007,0.275l0.021-0.014c0.212,6.166,5.265,11.103,11.481,11.103c6.353,0,11.502-5.149,11.502-11.502 c0-5.796-4.292-10.577-9.869-11.372c1.386-4.595,5.645-7.938,10.694-7.938v-4.106C63.856,32.625,53.378,42.841,52.941,55.627z'/%3E%3C/g%3E%3C/svg%3E");
      mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' x='0px' y='0px' viewBox='0 0 100 125' enable-background='new 0 0 100 100' xml:space='preserve'%3E%3Cg%3E%3Cpath d='M23.105,55.627c-0.005,0.138-0.021,0.273-0.021,0.413c0,0.047,0.006,0.092,0.007,0.138 c-0.001,0.092-0.007,0.183-0.007,0.275l0.02-0.014c0.212,6.166,5.265,11.103,11.482,11.103c6.352,0,11.502-5.149,11.502-11.502 c0-5.796-4.292-10.577-9.869-11.372c1.386-4.595,5.645-7.938,10.695-7.938v-4.106C34.021,32.625,23.541,42.841,23.105,55.627z'/%3E%3Cpath d='M52.941,55.627c-0.005,0.138-0.021,0.273-0.021,0.413c0,0.047,0.007,0.092,0.007,0.138 c-0.001,0.092-0.007,0.183-0.007,0.275l0.021-0.014c0.212,6.166,5.265,11.103,11.481,11.103c6.353,0,11.502-5.149,11.502-11.502 c0-5.796-4.292-10.577-9.869-11.372c1.386-4.595,5.645-7.938,10.694-7.938v-4.106C63.856,32.625,53.378,42.841,52.941,55.627z'/%3E%3C/g%3E%3C/svg%3E");
      font-size: 8rem;
      position: absolute;
      font-family: serif;
      background-color: var(--accent-color);
      left: -3.5rem;
      top: -1.5rem;
      line-height: 1;
    }

    blockquote::after {
      transform: rotate(180deg);
      content: "";
      display: block;
      width: 4rem;
      height: 5rem;
      -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' x='0px' y='0px' viewBox='0 0 100 125' enable-background='new 0 0 100 100' xml:space='preserve'%3E%3Cg%3E%3Cpath d='M23.105,55.627c-0.005,0.138-0.021,0.273-0.021,0.413c0,0.047,0.006,0.092,0.007,0.138 c-0.001,0.092-0.007,0.183-0.007,0.275l0.02-0.014c0.212,6.166,5.265,11.103,11.482,11.103c6.352,0,11.502-5.149,11.502-11.502 c0-5.796-4.292-10.577-9.869-11.372c1.386-4.595,5.645-7.938,10.695-7.938v-4.106C34.021,32.625,23.541,42.841,23.105,55.627z'/%3E%3Cpath d='M52.941,55.627c-0.005,0.138-0.021,0.273-0.021,0.413c0,0.047,0.007,0.092,0.007,0.138 c-0.001,0.092-0.007,0.183-0.007,0.275l0.021-0.014c0.212,6.166,5.265,11.103,11.481,11.103c6.353,0,11.502-5.149,11.502-11.502 c0-5.796-4.292-10.577-9.869-11.372c1.386-4.595,5.645-7.938,10.694-7.938v-4.106C63.856,32.625,53.378,42.841,52.941,55.627z'/%3E%3C/g%3E%3C/svg%3E");
      mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' x='0px' y='0px' viewBox='0 0 100 125' enable-background='new 0 0 100 100' xml:space='preserve'%3E%3Cg%3E%3Cpath d='M23.105,55.627c-0.005,0.138-0.021,0.273-0.021,0.413c0,0.047,0.006,0.092,0.007,0.138 c-0.001,0.092-0.007,0.183-0.007,0.275l0.02-0.014c0.212,6.166,5.265,11.103,11.482,11.103c6.352,0,11.502-5.149,11.502-11.502 c0-5.796-4.292-10.577-9.869-11.372c1.386-4.595,5.645-7.938,10.695-7.938v-4.106C34.021,32.625,23.541,42.841,23.105,55.627z'/%3E%3Cpath d='M52.941,55.627c-0.005,0.138-0.021,0.273-0.021,0.413c0,0.047,0.007,0.092,0.007,0.138 c-0.001,0.092-0.007,0.183-0.007,0.275l0.021-0.014c0.212,6.166,5.265,11.103,11.481,11.103c6.353,0,11.502-5.149,11.502-11.502 c0-5.796-4.292-10.577-9.869-11.372c1.386-4.595,5.645-7.938,10.694-7.938v-4.106C63.856,32.625,53.378,42.841,52.941,55.627z'/%3E%3C/g%3E%3C/svg%3E");
      font-size: 8rem;
      position: absolute;
      font-family: serif;
      background-color: var(--accent-color);
      right: -3rem;
      bottom: -1.5rem;
      line-height: 1;
    }

    .rainbows blockquote::before,
    .rainbows blockquote::after {
      background: var(--gradient-color);
    }

    ol li {
      margin-bottom: 1rem;
    }
/* ... */

